<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.celisa.ejemplomvvm.ui.DatosLibroViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/default_gap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/title_tet"
            style="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:layout_marginBottom="@dimen/default_gap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@={viewmodel.nombreInput}"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@={viewmodel.isbnInput}"
            android:hint="@string/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@={viewmodel.autorInput}"
            android:hint="@string/autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@={viewmodel.editorialInput}"
            android:hint="@string/editorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@={viewmodel.anioInput}"
            android:hint="@string/anio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="@{()-> viewmodel.onSubmit()}"
            android:text="@string/accion_text"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_marginTop="@dimen/default_gap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/texto_result"
                android:text="@{viewmodel.verTexto}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>
</layout>